--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PhotoGallery</string>
+    <string name="load_gallery">Load gallery</string>
+    <string name="search">Search</string>
+    <string name="app_label">PhotoGalery</string>
+    <string name="search_hint">Search here</string>
+    <string name="load_recent">Load recents</string>
 </resources>
